# trusted-publishing

./: .gitignore  CHANGELOG.md  cabal.project  flake.nix  treefmt.toml  trusted-publishing.cabal
.github/workflows/: test-jwt.yml
gh-integration-test/: CHANGELOG.md  LICENSE  gh-integration-test.cabal
gh-integration-test/app/: Main.hs
src/: TrustedPublishing.hs
