cabal-version:   3.4
name:            trusted-publishing
version:         0.0.0.1
license:         BSD-3-Clause
license-file:    LICENSE
author:          Spencer Janssen
maintainer:      spencerjanssen@gmail.com
category:        Distribution
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings

  --cabal-fmt: expand src
  exposed-modules:  TrustedPublishing
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , http-conduit
    , jose          ^>=0.12
    , lens
    , mtl
    , network-uri
    , pcre2
    , text

  hs-source-dirs:   src
  default-language: GHC2021
