cabal-version:   3.4
name:            gh-integration-test
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Spencer Janssen
maintainer:      spencerjanssen@gmail.com
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable gh-integration-test
  import:           warnings
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   app
  default-language: GHC2021
